--- a/hybrid.tex
+++ b/hybrid.tex
@@ -51,7 +51,7 @@ $\mathcal{D}$ and 2-D unit sphere angular domain $\mathcal{S}$ is:
   \frac{\partial}{\partial t}\left[\frac{\Psi_g(\vec{r},\hat{\Omega},t)}{v_g}\right] +
   \hat{\Omega}\cdot\nabla\Psi_g(\vec{r},\hat{\Omega},t) + \Sigma_{t,g}
   \Psi_g(\vec{r},\hat{\Omega},t) =
-  \sum^G_{g'=1}\int_\mathcal{S} \Sigma_{s,g'\rightarrow g}(\hat{\Omega}'\rightarrow\hat{\Omega})
+  \sum^G_{g'=1}\int_\mathcal{S} \Sigma_s^{g'\rightarrow g}(\hat{\Omega}'\rightarrow\hat{\Omega})
   \Psi_{g'}(\vec{r},\hat{\Omega}',t)d\hat{\Omega}' \\
   + \frac{1}{4\pi}\chi_{p,g}(1-\beta)\sum^G_{g'=1} \nu\Sigma_{f,g'} \phi_{g'}(\vec{r},t)
   + \frac{1}{4\pi}\sum^I_{i=1}\chi_{d,g}
@@ -90,7 +90,7 @@ the following vector forms:
     \vdots \\
     \Psi_G
   \end{bmatrix},
-  \bm{\phi} \equiv \int_S \bm{\Psi}d\hat{\Omega} \equiv
+  \bm{\Phi} \equiv \int_S \bm{\Psi}d\hat{\Omega} \equiv
   \begin{bmatrix}
     \phi_1 \\
     \phi_2 \\
@@ -151,10 +151,10 @@ We also define the following operators:
   \mathbb{L}\bm{\Psi} \equiv \mathbb{L}_1\bm{\Psi} + \mathbb{L}_2\bm{\Psi}, \nonumber \\
   \mathbb{S}\bm{\Psi} \equiv
   \begin{bmatrix}
-    \sum^G_{g'=1}\int_S \Sigma_{s,g'\rightarrow 1}\Psi_{g'}d\hat{\Omega} \\
-    \sum^G_{g'=2}\int_S \Sigma_{s,g'\rightarrow 2}\Psi_{g'}d\hat{\Omega} \\
+    \sum^G_{g'=1}\int_S \Sigma_s^{g'\rightarrow 1}\Psi_{g'}d\hat{\Omega} \\
+    \sum^G_{g'=2}\int_S \Sigma_s^{g'\rightarrow 2}\Psi_{g'}d\hat{\Omega} \\
     \vdots \\
-    \sum^G_{g'=G}\int_S \Sigma_{s,g'\rightarrow G}\Psi_{g'}d\hat{\Omega}
+    \sum^G_{g'=G}\int_S \Sigma_s^{g'\rightarrow G}\Psi_{g'}d\hat{\Omega}
   \end{bmatrix},
   \mathbb{B}\bm{\Psi} \equiv
   \begin{bmatrix}
@@ -530,7 +530,7 @@ multiplication factor $\frac{1}{k}$ for $k$-eigenvalue problems.
   \end{cases},
 \end{gather}
 %
-where $\Psi^\text{inc}_{g,d}=0$ for a vacuum boundary and positive for a boundary source.
+where $\Psi^\text{inc}_{g,d}$ is zero on a vacuum boundary or positive for a boundary source.
 
 \noindent Reflecting boundary term:
 %
@@ -551,7 +551,7 @@ where $\Psi^\text{inc}_{g,d}=0$ for a vacuum boundary and positive for a boundar
 This concludes the derivation of the \gls{SAAF} formulation of the $S_N$ neutron transport method
 for generating transport corrections in the hybrid $S_N$-diffusion method.
 
-\section{Transport Correction Formulation}
+\section{Transport Correction Formulations}
 
 The conventional approach for determining diffusion coefficients for each subregion involves
 running a high-fidelity neutron transport simulation to tally region-wide estimates of the neutron
@@ -565,20 +565,20 @@ anisotropic scattering and small flux gradients. These conditions do not hold ne
 control rods, near interfaces of neighboring materials with highly dissimilar neutronic properties,
 and in materials with significant scattering contributions from light nuclei.
 
-Three main options exist in the literature for applying
+In this work, we explored two options for applying
 transport corrections to the neutron diffusion equations: applying
-diffusion coefficient corrections, adding a drift term, or adding a
-correction term.
+diffusion corrections or adding a drift correction term.
 
-\subsection{Diffusion Coefficient Correction}
+\subsection{Diffusion Correction}
 
-Diffusion coefficient corrections involve replacing the diffusion coefficient $D_g$ in the
+Diffusion corrections involve replacing the diffusion coefficient $D_g$ in the
 diffusion term with ``optimal'' diffusion coefficients based on
-pointwise transport corrections. The literature review in Chapter \ref{chap:lit} covers two such
+pointwise transport corrections. The literature review in Section \ref{sec:summary-nts-mtds} covers
+two such
 examples in the Ronen method by Ronen \cite{ronen_accurate_2004} and the space-dependent diffusion
 coefficients by Pounders \& Rahnema \cite{pounders_diffusion_2009}.
 
-For the hybrid $S_N$-diffusion method, I used a formulation that incorporates pointwise
+For the hybrid $S_N$-diffusion method, we used a formulation that incorporates pointwise
 corrections to the neutron diffusion flux solution from the $S_N$-derived flux solution as follows:
 %
 \begin{align}
@@ -586,12 +586,18 @@ corrections to the neutron diffusion flux solution from the $S_N$-derived flux s
 \end{align}
 %
 where $D^s_g$ is the \gls{SVDC}, and the $tr$ superscript denotes the transport-derived neutron
-current and scalar flux solutions from the $S_N$ method.
-The basic form of this equation is Fick's first law of diffusion. The result is a diffusion
-coefficient variable that varies in space from point to point. We assume that it is continuous and
+current and scalar flux solutions from the $S_N$ method. Transport corrections introduced through
+$J_{tr}$ are scaled by the flux gradient. We assumed that it varies continuously and
 at least once differentiable except at dissimilar material interfaces. \glspl{SVDC} provide
-pointwise corrections to closely match the diffusion flux
-solution to the $S_N$ flux solution.
+pointwise corrections to closely match the diffusion flux solution to the $S_N$ flux solution.
+By replacing $D_g$ with $D^s_g$, we are effectively adding the following transport correction term
+%
+\begin{gather}
+  -\frac{\partial}{\partial x}(D^s_g-D_g)\frac{\partial\phi_g}{\partial x}
+\end{gather}
+to the neutron diffusion equations. Alternatively, we may define
+$\partial D\equiv\left(D^s_g-D_g)\right)$. This alternative form shows that diffusion
+correction applies a multiplicative closure that scales with the flux gradient.
 
 Eq.\ \ref{eq:svdc} is identical to Ronen's \cite{ronen_accurate_2004} and Pounders \& Rahnema's
 \cite{pounders_diffusion_2009} formulations for space-dependent diffusion coefficients in Eq.\
@@ -613,7 +619,7 @@ with the reference flux solutions. They recognized that volume averaging within 
 for piecewise-constant diffusion coefficients introduces some truncation error if the flux is
 non-linear within the mesh element. This design choice may be due to an intention to retain the
 diffusion coefficient as a constant in the $\frac{d}{dx}D\frac{d\phi}{dx}$ term of the neutron
-diffusion equation (Eq.\ \ref{eq:1d-diff}).
+diffusion equation (Eq.\ \ref{eq:mg-diff}).
 
 Unlike their approach, the \gls{SVDC} formulation in Eq.\ \ref{eq:svdc} allows for continuously
 varying diffusion coefficients to reduce truncation error. In practice, the discretization order of
@@ -623,13 +629,12 @@ implementation of the 2nd-order diffusion term to handle spatial derivatives of 
 diffusion coefficient as $D^s_g$ is not uniform in space.
 
 Regardless of the differences in implementations amongst the methods discussed here,
-diffusion coefficient corrections applied through Eq.\ \ref{eq:saaf} were
+diffusion corrections applied through Eq.\ \ref{eq:saaf} were
 found to be effective in enabling the neutron diffusion method to accurately reproduce reference
-flux solutions \cite{tomatis_application_2011, gross_high-accuracy_2020, tomatis_ronen_2021,
-gross_comprehensive_2023, cufe_study_2024, pounders_diffusion_2009}.
-However, a significant challenge for space-dependent diffusion coefficients
-involves their resolution near neutron flux peaks. The neutron current and flux gradient values in
-Eq.\ \ref{eq:svdc} generally do not reach zero at the same points in space,
+flux solutions \cite{gross_comprehensive_2023, pounders_diffusion_2009}.
+Howver, a significant challenge for diffusion corrections
+involves their resolution near neutron flux peaks. As observed in Eq.\ \ref{eq:svdc}, the neutron
+current and flux gradient values do not necessarily reach zero at the same points in space,
 resulting in diffusion coefficient values tending to positive or negative infinity when the
 flux gradient is close to zero. Pounders \& Rahnema avoided this issue by using
 larger mesh sizes to calculate their empirical diffusion coefficients. However, their
@@ -637,231 +642,191 @@ remedy contradicts mesh convergence requirements and would worsen flux accuracy 
 steep, non-linear fluxes, such as near control rods. For the Ronen method, Gross et al.\
 \cite{gross_comprehensive_2023} applied a numerical fix by avoiding correction
 calculations wherever the flux gradient values fall below a certain threshold. 
-Tomatis \& Dall'Osso
-\cite{tomatis_application_2011} developed an alternative formulation in the form of drift terms
-while 
 
-\subsection{Spatially Varying Diffusion Coefficients} \label{sec:svdc}
+\subsection{Drift Correction Term}
 
-The conventional approach for determining diffusion coefficients for each subregion involves
-running a high-fidelity neutron transport simulation to tally region-wide estimates of the neutron
-transport cross section. The transport cross section formulation is derived from the $P_1$
-approximation of the neutron transport equation with isotropic sources \cite{bell_nuclear_1970}.
-Essentially, each defined subregion has a constant diffusion coefficient value. However, as
-discussed in Section \ref{sec:summary-nts-mtds}, the neutron diffusion
-equation is only valid in regions of high scattering-to-removal ratios with, at most, linearly
-anisotropic scattering and small flux gradients. These conditions do not hold near or within
-control rods, near interfaces of neighboring materials with highly dissimilar neutronic properties,
-and in materials with significant scattering contributions from light nuclei.
+Drift correction terms feature prominently in existing literature as transport correction
+terms for \gls{NDA} schemes or nodal diffusion methods
+\cite{smith_nodal_1983, smith_assembly_1986, adams_fast_2002, wang_diffusion_2014}. \gls{NDA}
+schemes are \gls{HOLO} methods \cite{chacon_multiscale_2017} similar to the \gls{QD} method for
+accelerating a neutron transport
+method (high-order) with a modified neutron diffusion method (low-order). Drift terms
+are added to the low-order neutron diffusion equations to correct them such that the modified
+equations can reproduce the transport solution upon reaching iterative convergence. In nodal
+diffusion methods, the drift terms are used to rectify the incoming and outgoing neutron
+currents between adjacent nodes.
 
-In the hybrid $S_N$-diffusion method, I propose replacing the conventional $P_1$-based
-diffusion coefficients with an alternate formulation that incorporates pointwise corrections
-to the neutron diffusion flux solution from the $S_N$-derived flux solution as follows:
+The general form of drift correction terms to be added to the neutron diffusion equations is a
+first-order derivative term $\nabla\cdot \vec{D}_g\phi_g$ (note the vector notation). As such,
+drift terms apply
+multiplicative closures that scale with the flux. This contrasts with diffusion
+corrections which scale with the flux gradient instead. Therefore, drift terms do not suffer from
+the division-by-zero errors encountered with diffusion corrections.
+
+Derivations for the drift terms depend on the discretization schemes of the high- and low-order
+equations. For this work, we will adopt drift term derivations developed by Wang et al.\
+\cite{wang_diffusion_2014, wang_rattlesnake_2018}. We start by integrating Eq.\ \ref{eq:saaf-vt}
+over the 2-D unit sphere angular domain $\mathcal{S}$ and replacing $\bm{\Psi}^*$ with isotropic
+test functions $\bm{\Phi}^*$ to obtain the neutron balance equation:
 %
-\begin{align}
-  D^s_g(x) &= -J^{tr}_g(x)\bigg/\frac{d\phi^{tr}_g(x)}{dx}. \label{eq:svdc}
-\end{align}
+\begin{multline}
+  \left(\bm{\Phi}^*,\frac{\partial}{\partial t}\left(\frac{\bm{\Phi}}{\bm{v}}\right)\right)_\mathcal{D}
+  + \left(\mathbb{L}_2\bm{\Phi}^*,\bm{\Phi}\right)_\mathcal{D}
+  - \left(\nabla\bm{\Phi}^*,\vec{\bm{J}}\right)_\mathcal{D}
+  + \left(\bm{\Phi}^*,\bm{J}^\text{out}\right)_{\partial\mathcal{D}_v} + \\
+  \left(\bm{\tau}\nabla\bm{\Phi}^*, \frac{\partial}{\partial t}\left(\frac{\vec{\bm{J}}}{\bm{v}}\right)
+    + \nabla\cdot(\vec{\vec{\bm{E}}}\bm{\Phi}) +\mathbb{L}_2\vec{\bm{J}} -
+    \mathbb{S}_1\vec{\bm{J}}\right)_\mathcal{D}
+  = \left(\bm{\Phi}^*,\mathbb{S}_0\bm{\Phi}\right)_\mathcal{D}
+  + \left(\bm{\Phi}^*,\bm{Q}_0\right)_\mathcal{D},
+\end{multline}
 %
-where $D^s$ is the \glspl{SVDC}, and the $tr$ superscript denotes the transport-computed neutron
-current and scalar flux solutions from the $S_N$ method.
-The basic form of this equation is Fick's first law of diffusion. The result is a diffusion
-coefficient variable that continuously varies in space from point to point except at dissimilar
-material interfaces. \glspl{SVDC} provide pointwise corrections to closely match the diffusion flux
-solution to the $S_N$ flux solution.
-
-Eq.\ \ref{eq:svdc} is identical to Ronen's \cite{ronen_accurate_2004} and Pounders \& Rahnema's
-\cite{pounders_diffusion_2009} formulations for space-dependent diffusion coefficients in Eq.\
-\ref{eq:ronen} and Eq.\ \ref{eq:emp}, respectively. In comparison with
-the Ronen method, our approaches differ in how $\phi_{tr}$ and $J_{tr}$ are obtained. Starting with
-a standard neutron diffusion calculation, the Ronen method applies an analytically derived
-transport operator on every iteration to calculate a new estimate of $J_{tr}$ using the $\phi$
-solution from the previous iteration. The main difficulty for the Ronen method lies in deriving the
-transport operators which has been achieved for only simple 1-D geometries thus far.
-
-For the \textit{empirical method} by Pounders \& Rahnema, their diffusion coefficients are
-piecewise-constant and they assumed a priori knowledge of the reference flux solution.
-Pounders \& Rahnema \cite{pounders_diffusion_2009} demonstrated the effectiveness of applying
-pointwise corrections derived from analytical or Monte Carlo reference flux solutions. Compared
-with conventional $P_1$-based out-scatter and flux-limited approximations of the diffusion
-coefficient, their diffusion coefficients showed superior agreement
-with the reference flux solutions. They recognized that volume averaging within each mesh element
-for piecewise-constant diffusion coefficients introduces some truncation error if the flux is
-non-linear within the mesh element. This design choice may be due to an intention to retain the
-diffusion coefficient as a constant in the $\frac{d}{dx}D\frac{d\phi}{dx}$ term of the neutron
-diffusion equation (Eq.\ \ref{eq:1d-diff}).
-
-Unlike their approach, the \gls{SVDC} formulation in Eq.\ \ref{eq:svdc} allows for continuously
-varying diffusion coefficients to reduce truncation error. In practice, the discretization order of
-\gls{SVDC} variables in a numerical calculation would be the same as the discretization order of
-the reference flux solution. This formulation introduces a minor change to the finite difference
-implementation of the 2nd-order diffusion term to handle spatial derivatives of the
-diffusion coefficient. However, the finite element implementation sees no change as the 2nd-order
-diffusion term is commonly treated with integration-by-parts to reduce it to a 1st-order
-differential term with no derivatives of the diffusion coefficient. Refer to Section
-\ref{sec:implementation} for key numerical implementation details of a finite difference neutron
-diffusion solver with support for handling \glspl{SVDC}.
-
-For the rest of Section \ref{sec:svdc}, I will show how the \glspl{SVDC} may differ from the
-conventional $P_1$-based diffusion coefficient before presenting further details of the hybrid
-$S_N$-diffusion method in Section \ref{sec:theory}.
-
-\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=.7\columnwidth]{case-0-geometry}
-  \caption{Case 0: A 1-D, two-region system containing a 0.5-cm thick control rod and a 24.5-cm
-    thick homogeneous mixture of molten fuel salt and graphite moderator. Reflective boundary
-    conditions apply on both ends.}
-  \label{fig:case-0-geom}
-\end{figure}
-
-\subsubsection{\gls{SVDC} Demonstration with Case 0}
-
-To facilitate the following demonstration of a neutron diffusion calculation with \glspl{SVDC},
-consider a 1-D, two-region system (which I will refer to as Case 0 moving forward) consisting of a
-highly neutron-absorbing material and a
-neutron-multiplying region with reflective boundary conditions on both ends (Figure
-\ref{fig:case-0-geom}). I defined the material specifications of the control rod, molten fuel salt,
-and graphite moderator based on the material compositions of the \gls{MSRE}
-\cite{robertson_msre_1965}. The
-homogenized molten fuel salt and graphite regions minimize discrepancies arising from geometrical
-heterogeneity. The group constant input data for the diffusion and $S_N$ solvers (e.g., $P_1$-based
-diffusion coefficients, cross sections, fission spectra) were sampled at 900 K and generated using
-the OpenMC Monte Carlo neutronics software \cite{romano_openmc:_2015}. OpenMC uses the flux-limited
-approximation method, developed by Pomraning \cite{pomraning_flux-limited_1984}, to calculate
-diffusion coefficients. The condensed
-neutron energy spectrum forms two energy groups bounded between $10^{-5}$, $10^0$, and $10^8$ eV.
-
-I solved for the neutron flux in this system using the following set of numerical solvers:
+\begin{gather}
+  \shortintertext{where}
+  \vec{\bm{J}} \equiv
+  \begin{bmatrix}
+    \vec{J}_1 \\
+    \vec{J}_2 \\
+    \vdots \\
+    \vec{J}_G
+  \end{bmatrix},
+  \bm{J}^\text{out} \equiv
+  \begin{bmatrix}
+    \int_{|\hat{\Omega}\cdot\hat{n}_b|>0}|\hat{\Omega}\cdot\hat{n}_b|\Psi_1 d\hat{\Omega} \\
+    \int_{|\hat{\Omega}\cdot\hat{n}_b|>0}|\hat{\Omega}\cdot\hat{n}_b|\Psi_2 d\hat{\Omega} \\
+    \vdots \\
+    \int_{|\hat{\Omega}\cdot\hat{n}_b|>0}|\hat{\Omega}\cdot\hat{n}_b|\Psi_G d\hat{\Omega}
+  \end{bmatrix},
+  \bm{J}^\text{inc} \equiv
+  \begin{bmatrix}
+    J^\text{inc}_1 \\
+    J^\text{inc}_2 \\
+    \vdots \\
+    J^\text{inc}_G
+  \end{bmatrix},
+  \vec{\vec{\bm{E}}} \equiv
+  \begin{bmatrix}
+    \frac{\int_\mathcal{S} \hat{\Omega}\hat{\Omega}\Psi_1 d\hat{\Omega}}{\int_\mathcal{S}\Psi_1 d\hat{\Omega}} \\
+    \frac{\int_\mathcal{S} \hat{\Omega}\hat{\Omega}\Psi_2 d\hat{\Omega}}{\int_\mathcal{S}\Psi_2 d\hat{\Omega}} \\
+    \vdots \\
+    \frac{\int_\mathcal{S} \hat{\Omega}\hat{\Omega}\Psi_G d\hat{\Omega}}{\int_\mathcal{S}\Psi_G d\hat{\Omega}}
+  \end{bmatrix}, \nonumber \\
+  \mathbb{S}_0 \bm{\Phi} \equiv
+  \begin{bmatrix}
+    \sum^G_{g'=1}\Sigma_s^{g'\rightarrow 1}\phi_{g'} \\
+    \sum^G_{g'=1}\Sigma_s^{g'\rightarrow 2}\phi_{g'} \\
+    \vdots \\
+    \sum^G_{g'=1}\Sigma_s^{g'\rightarrow G}\phi_{g'}
+  \end{bmatrix},
+  \mathbb{S}_1 \vec{\bm{J}} \equiv
+  \begin{bmatrix}
+    \sum^G_{g'=1}\Sigma_{s,1}^{g'\rightarrow 1}\vec{J}_{g'} \\
+    \sum^G_{g'=1}\Sigma_{s,1}^{g'\rightarrow 2}\vec{J}_{g'} \\
+    \vdots \\
+    \sum^G_{g'=1}\Sigma_{s,1}^{g'\rightarrow G}\vec{J}_{g'}
+  \end{bmatrix},
+  \bm{Q}_0 \equiv
+  \begin{bmatrix}
+    \int_\mathcal{S} Q_1 d\hat{\Omega} \\
+    \int_\mathcal{S} Q_2 d\hat{\Omega} \\
+    \vdots \\
+    \int_\mathcal{S} Q_G d\hat{\Omega}
+  \end{bmatrix}, \nonumber
+\end{gather}
 %
-\begin{enumerate}
-  \item Neutron diffusion solver with $P_1$-based diffusion coefficients generated directly from
-    the group constant generation step with OpenMC.
-  \item $S_N$ neutron transport solver with $N=8$ and up to 2nd-order Legendre
-    moments of the group-to-group neutron scattering cross sections.
-  \item Neutron diffusion solver with \glspl{SVDC} generated from the prior $S_8$
-    flux solution.
-\end{enumerate}
+and $\partial\mathcal{D}_v$ represents sections of $\partial\mathcal{D}$ which are vacuum boundaries. We
+assumed that $\bm{Q}$ is an isotropic source because we do not deal with anisotropic sources in
+this work outside of scattering.
+We define the following expression
 %
-I implemented the diffusion solvers using the finite difference method and the $S_N$
-solver using the diamond-difference transport sweep method in Python. For
-brevity, I defer further numerical implementation details of these solvers to Section
-\ref{sec:implementation}.
-
-\begin{figure}[htb!]
-  \centering
-  \begin{subfigure}[b]{.49\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{case-0-group-1-flux}
-    \caption{Group 1}
-    \label{fig:c0g1flux}
-  \end{subfigure}
-  \hfill
-  \begin{subfigure}[b]{.49\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{case-0-group-2-flux}
-    \caption{Group 2}
-    \label{fig:c0g2flux}
-  \end{subfigure}
-  \caption{Neutron group 1 and 2 flux distributions from the diffusion, $S_8$, and
-  diffusion-\gls{SVDC} solvers for Case 0.}
-  \label{fig:c0flux}
-\end{figure}
+\begin{gather}
+  \vec{\bm{r}}_1 \equiv \frac{\partial}{\partial t}\left(\frac{\vec{\bm{J}}}{\bm{v}}\right)
+  + \nabla\cdot(\vec{\vec{\bm{E}}}\bm{\Phi}) + \mathbb{L}_2\vec{\bm{J}} -
+  \mathbb{S}_1\vec{\bm{J}} \label{eq:1st-moment}
+\end{gather}
 %
-\begin{figure}[htb!]
-  \centering
-  \begin{subfigure}[b]{.49\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{case-0-group-1-diffcoef}
-    \caption{Group 1}
-    \label{fig:c0g1diffcoef}
-  \end{subfigure}
-  \hfill
-  \begin{subfigure}[b]{.49\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{case-0-group-2-diffcoef}
-    \caption{Group 2}
-    \label{fig:c0g2diffcoef}
-  \end{subfigure}
-  \caption{$P_1$-based diffusion coefficient and \gls{SVDC} spatial distributions
-  for Case 0.}
-  \label{fig:c0diffcoef}
-\end{figure}
+to simplify the balance equation. We note that Eq.\ \ref{eq:1st-moment} is identical to the second
+low-order equation of the \gls{QD} method (Eq.\ \ref{eq:qd-low-1st}).
+We also introduce the diffusion operator
+%
+\begin{gather}
+  \mathbb{D}\nabla\bm{\Phi} \equiv
+  \begin{bmatrix}
+    D_1\nabla\phi_1 \\
+    D_2\nabla\phi_2 \\
+    \vdots \\
+    D_G\nabla\phi_G
+  \end{bmatrix},
+\end{gather}
+%
+and recognize that under the diffusion approximation, the vacuum boundary condition is given as
+%
+\begin{gather}
+  -\mathbb{D}\nabla\bm{\Phi}\cdot\hat{n}_b = \frac{\bm{\Phi}}{2}, \hspace{1cm} \vec{r}\in\partial
+  \mathcal{D}_v.
+\end{gather}
+%
+We can rewrite the balance equation as
+%
+\begin{multline}
+  \left(\bm{\Phi}^*,\frac{\partial}{\partial t}\left(\frac{\bm{\Phi}}{\bm{v}}\right)\right)_\mathcal{D}
+  + \left(\nabla\bm{\Phi}^*, \mathbb{D}\nabla\bm{\Phi}\right)_\mathcal{D}
+  + \left(\mathbb{L}_2\bm{\Phi}^*,\bm{\Phi}\right)_\mathcal{D}
+  + \left(\bm{\Phi}^*,\frac{\bm{\Phi}}{2}\right)_{\mathcal{D}_v}
+  + \left(\nabla\bm{\Phi}^*,\bm{\tau}\vec{\bm{r}}_1-\vec{\bm{J}}-\mathcal{D}\bm{\Phi}\right)_\mathcal{D}
+  + \\
+  \left(\bm{\Phi}^*,\bm{J}^\text{out}-\frac{\bm{\Phi}}{2}\right)_{\partial\mathcal{D}_v}
+  = \left(\bm{\Phi}^*,\mathbb{S}_0\bm{\Phi}\right)_\mathcal{D}
+  + \left(\bm{\Phi}^*,\bm{Q}_0\right)_\mathcal{D}. \label{eq:modified-diff}
+\end{multline}
+%
+We can observe that Eq.\ \ref{eq:modified-diff} is a modified neutron diffusion equation with
+transport corrections provided by the fifth and sixth terms. The fifth term is a drift term with
+the drift vector defined as
+%
+\begin{gather}
+  \vec{\bm{D}} \equiv \frac{\bm{\tau}\vec{\bm{r}}_1-\vec{\bm{J}}-\mathbb{D}\nabla\bm{\Phi}}{\bm{\Phi}}
+\end{gather}
+%
+and the sixth term is a boundary correction term with the boundary coefficient vector defined as
+%
+\begin{gather}
+  \bm{\gamma} \equiv \frac{\bm{J}^\text{out}}{\bm{\Phi}}-\frac{1}{2}\bm{I}.
+\end{gather}
+%
+With the $S_N$ angular discretization scheme, the drift and boundary correction vector components
+can be evaluated as
+%
+\begin{gather}
+  \vec{D}_g = \frac{\sum^{N_d}_{d=1}w_d\left(\tau_g\hat{\Omega}_d\hat{\Omega}_d\cdot\nabla\Psi_{g,d}
+  + \left(\tau_g\Sigma_{t,g}-1\right)\hat{\Omega}_d\Psi_{g,d}
+  - \tau_g\sum^G_{g'=1}\Sigma^{g'\rightarrow g}_{s,1}\hat{\Omega}_d\Psi_{g',d}
+  - D_g\nabla\Psi_{g,d}\right)}{\sum^{N_d}_{d=1}w_d\Psi_{g,d}}, \\
+  \gamma_g =
+  \frac{\sum_{\hat{\Omega}_d\cdot\hat{n}_b > 0}w_d |\hat{\Omega}_d\cdot\hat{n}_b |
+  \Psi_{g,d}}{\sum^{N_d}_{d=1}w_d\Psi_{g,d}}.
+\end{gather}
 
-Figure \ref{fig:c0flux} shows the group 1 and 2 neutron fluxes from the diffusion-$P_1$, $S_8$, and
-diffusion-\gls{SVDC} solvers with a uniform mesh size of 0.005 cm. I omitted the OpenMC flux
-solution because this exercise aims to demonstrate the effectiveness of \glspl{SVDC}
-in reproducing an $S_N$-derived flux solution. As expected, the diffusion-$P_1$ flux solution
-deviates from the $S_8$ flux solution, while the diffusion-\gls{SVDC} flux solution shows
-significantly better agreement with the $S_8$ flux solution. As shown in Table \ref{table:c0k}, the
-$k$ estimate from the diffusion-\gls{SVDC} solver is also closer to the $k$ estimate from the
-$S_8$ solver than the diffusion-$P_1$ solver.
+%\subsection{Additive Correction Term}
+%
+%Lastly, we can also incorporate transport corrections into the neutron diffusion equation through
+%additional additive terms.
+%We can obtain an additive correction term formulation from the \textit{Second-Moment}
+%method by Lewis \& Miller \cite{lewis_comparison_1976}. The literature review in Section
+%\ref{sec:summary-nts-mtds} covers how Anistratov \& Stehle \cite{anistratov_computational_2012}
+%used this formulation for their hybrid method with domain decomposition. Refer to Eqs.\
+%\ref{eq:2nd-moment-1}, \ref{eq:2nd-moment-2}, and \ref{eq:2nd-moment-3} for mathematical
+%formulations. After substituting Eq.\ \ref{eq:2nd-moment-2} into Eq.\ \ref{eq:2nd-moment-1} to
+%eliminate $J^{(s+1)}$, we have a modified neutron diffusion equation for $\phi^{(s+1)}$ with an
+%additional correction term $\nabla\cdot\nabla\cdot F^{(s+1/2)}$, where $(s)$ denotes the
+%iteration index for iterating between the high- and low-order equations.
+%
+%Unlike the previous two transport correction formulations, the additive correction term is an
+%additive closure that does not scale with the flux or the flux gradient in the low-order equation.
+%Therefore, for implementations of \gls{HOLO} or transport correction methods in which the high- and
+%low-order scalar flux solutions differ, additive correction terms may not provide the correction.
 
-\begin{table}[tb!]
-  \centering
-  \caption{Multiplication factor $k$ estimates from the diffusion-$P_1$, $S_8$, and
-  diffusion-\gls{SVDC} solvers and the absolute difference relative to the $S_8$ estimate.}
-  \begin{tabular}{l S S}
-    \toprule
-    Solver type & {$k$} & {$k-k_{S_8}$} \\
-    \midrule
-    $S_8$ & 0.62736 & {-} \\
-    Diffusion-$P_1$ & 0.60890 & -0.01846 \\
-    Diffusion-\gls{SVDC} & 0.62750 & +0.00013 \\
-    \bottomrule
-  \end{tabular}
-  \label{table:c0k}
-\end{table}
-
-The $P_1$-based diffusion coefficients and \glspl{SVDC} in Figure \ref{fig:c0diffcoef} show good
-agreement in the bulk fuel salt region far from the control rod region.
-This observation supports the validity of the neutron diffusion method under the conditions
-listed at the start of Section \ref{sec:svdc}. Closer to the control rod
-region, the \glspl{SVDC} deviate from the $P_1$-based diffusion coefficients because the
-prerequisites for diffusion theory are violated.
-
-Another key finding from this study is that the neutron diffusion method with $P_1$-based
-diffusion coefficients fails to reproduce the steep $S_8$ flux gradient in the control rod region
-for group 1 and in the homogeneous fuel-graphite region adjacent to the control rod region for both
-neutron groups. From a purely mathematical perspective, the streaming term in the neutron
-diffusion equation requires the lower
-\gls{SVDC} values in the absorber-adjacent region to induce steeper flux gradients and match the
-$S_8$ flux solution. Given that highly neutron-absorbing materials induce steep flux gradients
-around them, we can expect similar trends of \glspl{SVDC} being suppressed relative to
-$P_1$-based diffusion coefficients in other systems with control rods. The \gls{SVDC} values within
-the highly-absorbing region exhibit significant spatial variation but do not necessarily fall
-below the $P_1$-based diffusion coefficients.
-
-Thus far, this method is redundant because it requires a priori knowledge of a reference
-analytical flux solution or a highly accurate numerical solution calculated using neutron
-transport methods. While existing workflows for diffusion-based methods already require
-computationally intensive neutron transport simulations for group constant generation, this
-preprocessing step incurs a fixed computational cost through
-a series of neutron transport simulations. Compared to \glspl{SVDC}, $P_1$-based diffusion
-coefficients behave much more like intrinsic material properties as their definitions are largely
-tied to material cross sections. Variations in $P_1$-based diffusion coefficients primarily arise
-from changes in the neutron energy spectrum with no direct contribution from proximity to material
-interfaces (geometrical heterogeneity). $P_1$-based diffusion coefficients may be generated at
-various reactor temperatures and interpolated to model the temperature dependence. Conversely, the
-nature of \glspl{SVDC} as empirical, pointwise corrections for the diffusion equation
-makes it highly dependent on the neutron flux gradient and susceptible to more significant
-variations than region-wide estimates for $P_1$-based diffusion coefficients. \glspl{SVDC} will
-likely need to be dynamically generated at every timestep, such as with a two-level iterative
-scheme consisting of a $S_N$ neutron transport calculation and a neutron
-diffusion calculation. In this case, the required number of neutron transport simulations scales
-with the number of reactor simulations. Therefore, \gls{SVDC} generation cannot be adopted as a
-one-off preprocessing step. 
-
-Another significant challenge of \glspl{SVDC} and the high-order empirical diffusion coefficients
-involves their resolution near neutron flux peaks. The neutron current and flux gradient values in
-Eq.\ \ref{eq:svdc} generally do not reach zero at the same points in space,
-resulting in diffusion coefficient values tending to positive or negative infinity when the
-flux gradient is close to zero. Pounders \& Rahnema avoided this issue by using
-larger mesh sizes to calculate their empirical diffusion coefficients. However, their
-remedy contradicts mesh convergence requirements and would worsen flux accuracy in regions with
-steep, non-linear fluxes, such as near control rods. I will discuss my approach for investigating
-and finding an alternative solution for this issue in Section \ref{sec:devel-hybrid}.
-
-\subsection{Hybrid $S_N$-Diffusion Method} \label{sec:hybrid-method}
+\section{Hybrid $S_N$-Diffusion Method} \label{sec:hybrid-method}
 
 In order to reduce the computational cost of the high-level $S_N$ calculation, I propose reducing
 the problem domain of the $S_N$ method to a \textit{correction region} containing the control rod
