add verification chapter for referencing, hybrid chapter edits

--- a/acros.tex
+++ b/acros.tex
@@ -21,6 +21,7 @@
 \newacronym{CEA}{CEA}{Commissariat \`a l'\'Energie Atomique et aux \'Energies Alternatives}
 \newacronym{CFD}{CFD}{Computational Fluid Dynamics}
 \newacronym{CI}{CI}{continuous integration}
+\newacronym{CMFD}{CMFD}{coarse-mesh finite difference}
 \newacronym{CNEN}{CNEN}{Comiss\~{a}o Nacional de Energia Nuclear}
 \newacronym{CNERG}{CNERG}{Computational Nuclear Engineering Research Group}
 \newacronym{CNRS}{CNRS}{Centre National de la Recherche Scientifique}
@@ -77,6 +78,7 @@
 \newacronym{GUI}{GUI}{graphical user interface}
 \newacronym{HALEU}{HALEU}{high-assay low-enriched uranium}
 \newacronym{HLW}{HLW}{high level waste}
+\newacronym{HOLO}{HOLO}{high-order/low-order}
 \newacronym{HPC}{HPC}{high-performance computing}
 \newacronym{HTC}{HTC}{high-throughput computing}
 \newacronym{HTGR}{HTGR}{High-Temperature Gas-Cooled Reactor}
@@ -132,6 +134,7 @@
 \newacronym{MSRE}{MSRE}{Molten Salt Reactor Experiment}
 \newacronym{MSR}{MSR}{Molten Salt Reactor}
 \newacronym{NAGRA}{NAGRA}{National Cooperative for the Disposal of Radioactive Waste}
+\newacronym{NDA}{NDA}{nonlinear diffusion acceleration}
 \newacronym{NEAMS}{NEAMS}{Nuclear Energy Advanced Modeling and Simulation}
 \newacronym{NEUP}{NEUP}{Nuclear Energy University Programs}
 \newacronym{NFCSim}{NFCSim}{Nuclear Fuel Cycle Simulator}
@@ -149,7 +152,7 @@
 \newacronym{NWTRB}{NWTRB}{Nuclear Waste Technical Review Board}
 \newacronym{NZE}{NZE}{Net-Zero Emissions by 2050 Scenario}
 \newacronym{OCRWM}{OCRWM}{Office of Civilian Radioactive Waste Management}
-\newacronym{OOP}{OOP}{Object-oriented programming}
+\newacronym{OOP}{OOP}{object-oriented programming}
 \newacronym{ORION}{ORION}{ORION}
 \newacronym{ORNL}{ORNL}{Oak Ridge National Laboratory}
 \newacronym{PARCS}{PARCS}{Purdue Advanced Reactor Core Simulator}
