--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3741,3 +3741,57 @@ INIS Reference Number: 8288836},
 	pages = {201--225},
 	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\R9GWIAFT\\Wang et al. - 2014 - Diffusion Acceleration Schemes for Self-Adjoint An.pdf:application/pdf},
 }
+
+@article{gross_comprehensive_2023,
+	title = {Comprehensive investigation of the {Ronen} method in slab geometry},
+	volume = {55},
+	issn = {1738-5733},
+	url = {https://www.sciencedirect.com/science/article/pii/S1738573322004582},
+	doi = {10.1016/j.net.2022.09.026},
+	abstract = {A comprehensive investigation of the Ronen method is performed in homogeneous and heterogeneous slab problems from the Sood benchmark, considering isotropic and linearly-anisotropic problems. Three finite differences implementations are exercised and compared. The results are compared to reference solutions using one and two energy groups. The validation is performed for the criticality eigenvalue and the fundamental neutron flux distribution. The results demonstrate the significantly improved accuracy achievable by the Ronen method using a broad set of problems. For standard convergence tolerances, the maximal deviation in criticality eigenvalue is less than ten pcm, and the maximal deviation in the spatial distribution of the flux is less than 2\%, always located near sharp interfaces or vacuum boundaries.},
+	number = {2},
+	urldate = {2024-06-14},
+	journal = {Nuclear Engineering and Technology},
+	author = {Gross, Roy and Cufe, Johan and Tomatis, Daniele and Gilad, Erez},
+	month = feb,
+	year = {2023},
+	keywords = {Integral transport, Neutron diffusion, Non-linear transport correction, Ronen method, Sood benchmark},
+	pages = {734--748},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\DBDJDW45\\S1738573322004582.html:text/html},
+}
+
+@article{cufe_study_2024,
+	title = {Study of the {Accuracy} of the {Ronen} {Method} at {Material} {Interfaces}},
+	volume = {0},
+	issn = {0029-5639},
+	url = {https://doi.org/10.1080/00295639.2024.2333088},
+	doi = {10.1080/00295639.2024.2333088},
+	abstract = {The Ronen Method (RM) is a nonlinear iterative scheme that demands successive resolutions of the diffusion equation, where local diffusion constants are modified to reproduce more accurate estimates of the neutron currents by a transport operator. The methodology is currently formulated using the formalism of the collision probability method for evaluation of the current. The RM was recently tested on a complete suite of one-dimensional (1-D) multigroup benchmark problems. Small differences in the flux (less than 2\%) were reported at material interfaces and close to the vacuum boundary with respect to the reference solution from transport. This work investigates first a possible numerical equivalence between transport and diffusion in some representative 1-D problems from the same benchmark test suite. The equivalence is sought with optimal diffusion coefficients computed using reference transport solutions that allow for adjusting the diffusion model. The RM, which attempts to obtain such equivalent diffusion coefficients without knowing the reference solution, is then compared to the optimal coefficients. The accuracy of the flux distribution at material interfaces is investigated for different approximations of the vacuum boundary and by decreasing progressively the RM convergence tolerance set in the iterative scheme. Using tighter convergence criteria, the RM calculates more accurate flux distributions at all material interfaces, regardless of the value of the diffusion coefficient and the extrapolated distance set at the beginning of the iterative scheme. Maximum flux deviations are remarkably reduced when the RM convergence tolerance is set to eight or more significant digits, leading to improvements in the flux deviation of two orders in magnitude and providing numerical proof for equivalence with transport in the tested configurations.},
+	number = {0},
+	urldate = {2024-06-14},
+	journal = {Nuclear Science and Engineering},
+	author = {Cufe, Johan and Tomatis, Daniele},
+	year = {2024},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/00295639.2024.2333088},
+	keywords = {customized diffusion, equivalence, neutron transport, Ronen method},
+	pages = {1--20},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\X22Q6CG3\\Cufe and Tomatis - 2024 - Study of the Accuracy of the Ronen Method at Mater.pdf:application/pdf},
+}
+
+@article{chacon_multiscale_2017,
+	title = {Multiscale high-order/low-order ({HOLO}) algorithms and applications},
+	volume = {330},
+	issn = {0021-9991},
+	url = {https://www.sciencedirect.com/science/article/pii/S0021999116305770},
+	doi = {10.1016/j.jcp.2016.10.069},
+	abstract = {We review the state of the art in the formulation, implementation, and performance of so-called high-order/low-order (HOLO) algorithms for challenging multiscale problems. HOLO algorithms attempt to couple one or several high-complexity physical models (the high-order model, HO) with low-complexity ones (the low-order model, LO). The primary goal of HOLO algorithms is to achieve nonlinear convergence between HO and LO components while minimizing memory footprint and managing the computational complexity in a practical manner. Key to the HOLO approach is the use of the LO representations to address temporal stiffness, effectively accelerating the convergence of the HO/LO coupled system. The HOLO approach is broadly underpinned by the concept of nonlinear elimination, which enables segregation of the HO and LO components in ways that can effectively use heterogeneous architectures. The accuracy and efficiency benefits of HOLO algorithms are demonstrated with specific applications to radiation transport, gas dynamics, plasmas (both Eulerian and Lagrangian formulations), and ocean modeling. Across this broad application spectrum, HOLO algorithms achieve significant accuracy improvements at a fraction of the cost compared to conventional approaches. It follows that HOLO algorithms hold significant potential for high-fidelity system scale multiscale simulations leveraging exascale computing.},
+	urldate = {2024-06-17},
+	journal = {Journal of Computational Physics},
+	author = {Chacón, L. and Chen, G. and Knoll, D. A. and Newman, C. and Park, H. and Taitano, W. and Willert, J. A. and Womeldorff, G.},
+	month = feb,
+	year = {2017},
+	keywords = {Communication avoiding algorithms, High-order/low-order, HOLO, Implicit timestepping, Multiscale algorithms},
+	pages = {21--45},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\XTC82XDJ\\S0021999116305770.html:text/html},
+}
