--- a/lit.tex
+++ b/lit.tex
@@ -1335,12 +1335,13 @@ two-level neutronics method is based on the \textit{Second-Moment} method develo
 Miller \cite{lewis_comparison_1976}. The low-order second-moment equations are:
 %
 \begin{gather}
-  \nabla\cdot J^{(s+1)}+\Sigma_a\phi^{(s+1)} = q, \\
+  \nabla\cdot J^{(s+1)}+\Sigma_a\phi^{(s+1)} = q, \label{eq:2nd-moment-1} \\
   \frac{1}{3}\nabla\cdot\phi^{(s+1)}+\Sigma_t J^{(s+1)} = \nabla\cdot F^{(s+1/2)}
+  \label{eq:2nd-moment-2}
   \shortintertext{where}
   F^{(s+1/2)}_{\alpha\beta} = \int_{4\pi}
   \left(\frac{1}{3}\delta_{\alpha\beta}-\Omega_\alpha\Omega_\beta\right)
-  \Psi^{(s+1/2)} d\Omega
+  \Psi^{(s+1/2)} d\Omega \label{eq:2nd-moment-3}
 \end{gather}
 %
 $(s)$ denotes the iteration index. $F$ is a transport correction tensor calculated from the
