--- a/main.tex
+++ b/main.tex
@@ -141,10 +141,10 @@ nogroupskip=true]
 %\input{moltres}
 %\glsresetall
 
-\chapter{Verification of Multiphysics Coupling in Moltres}
-%\label{chap:benchmark}
-%\input{benchmark}
-%\glsresetall
+\chapter{Verification of Multiphysics Features in Moltres}
+\label{chap:verification}
+\input{verification}
+\glsresetall
 
 \chapter{Hybrid $S_N$-Diffusion Method}
 \label{chap:hybrid}
