--- a/hybrid.tex
+++ b/hybrid.tex
@@ -27,6 +27,15 @@ This chapter presents the mathematical derivation for the
 \gls{SAAF} formulation of the $S_N$ equations and the drift transport correction term for the
 neutron diffusion equations, and the computational algorithm for the hybrid method.
 
+Section \ref{sec:saaf} provides the mathematical derivation for the discretized weak form of the
+\gls{SAAF} $S_N$ neutron transport equations. Section \ref{sec:transport-correction} provides the
+derivations for the transport correction formulations I investigated for use in the hybrid method.
+Section \ref{sec:hybrid-algorithm} details the iteration algorithm for the hybrid method. Section
+\ref{sec:sn-bc} provides the boundary conditions formulated for the $S_N$ calculations in the
+hybrid method. In Section \ref{sec:buffer-region}, I discuss how transport corrections are handled
+in the hybrid method. Lastly, Section \ref{sec:hybrid-summary} summarizes the hybrid method and its
+implementation.
+
 % Section \ref{sec:theory} discusses the theoretical background for the hybrid $S_N$-diffusion
 % method. Section \ref{sec:implementation} provides numerical implementation details of
 % the hybrid method and its components. Sections \ref{sec:test-case} and \ref{sec:sim-param} describe
@@ -35,11 +44,14 @@ neutron diffusion equations, and the computational algorithm for the hybrid meth
 % with comparisons to higher-fidelity Monte Carlo and $S_N$ neutron transport methods. Lastly,
 % Section \ref{sec:hybrid-summary} summarizes the key findings in this chapter.
 
-% The proposed hybrid $S_N$-diffusion method is an iterative method to improve the
-% accuracy of neutron diffusion solutions in reactor systems with highly anisotropic flux regions
-% which I will use to model control rods. 
+\section{\Gls{SAAF} $S_N$ Method} \label{sec:saaf}
 
-\section{\Gls{SAAF} Formulation of the $S_N$ Method}
+This chapter starts with the $S_N$ method implementation required for the hybrid $S_N$-diffusion
+method. I implemented both $S_N$ and hybrid methods using \gls{FEM} numerical solver capabilities
+available through Moltres \cite{lindsay_moltres_2017} and the \gls{MOOSE} framework. In this
+section, the derivation for the \gls{SAAF} formulation of the $S_N$ method and its
+implementation in Moltres follows closely the derivation developed by Wang et al.
+\cite{wang_diffusion_2014, wang_rattlesnake_2018}.
 
 \subsection{Multigroup Neutron Transport Equations}
 
@@ -421,6 +433,7 @@ angular domain
   w = \sum^{N_d}_{d=1} w_d\ (= 8 \mbox{ for 3-D level-symmetric set}). \nonumber
 \end{gather}
 %
+$w$ replaces all instances of the $4\pi$ normalization constant in the \gls{SAAF} equations.
 We calculate the scalar flux $\phi_g$ by taking the zeroth moment with respect to $\hat{\Omega}$ as
 shown in Eq.\ \ref{eq:0th-mmt}. We can also calculate higher moments
 %
@@ -522,17 +535,28 @@ multiplication factor $\frac{1}{k}$ for $k$-eigenvalue problems.
   \langle\bm{\Psi}^*,\bm{\Psi}\rangle^+ - \langle\bm{\Psi}^*,\bm{\Psi}^\text{inc}\rangle^- =
   \begin{cases}
     \sum^G_{g=1}\sum^{N_d}_{d=1}w_d\left(\Psi^*_{g,d},
-    \hat{\Omega}_d\cdot\hat{n}_b\Psi_{g,d}\right),
-    & \hat{\Omega}\cdot\hat{n}_b>0,\vec{r}\in\partial\mathcal{D}_s \\
-    \sum^G_{g=1}\sum^{N_d}_{d=1}w_d\left(\Psi^*_{g,d},
-    \hat{\Omega}_d\cdot\hat{n}_b\Psi^\text{inc}_{g,d}\right),
-    & \hat{\Omega}\cdot\hat{n}_b<0,\vec{r}\in\partial\mathcal{D}_s
+    \hat{\Omega}_d\cdot\hat{n}_b\Psi_{g,d}\right)_{\partial\mathcal{D}},
+    & \hat{\Omega}\cdot\hat{n}_b>0,\vec{r}\in\partial\mathcal{D} \\
+    0,
+    & \hat{\Omega}\cdot\hat{n}_b<0,\vec{r}\in\partial\mathcal{D}
   \end{cases},
 \end{gather}
 %
-where $\Psi^\text{inc}_{g,d}$ is zero on a vacuum boundary or positive for a boundary source.
-
-\noindent Reflecting boundary term:
+Boundary source term:
+%
+\begin{gather}
+  \langle\bm{\Psi}^*,\bm{\Psi}\rangle^+ - \langle\bm{\Psi}^*,\bm{\Psi}^\text{inc}\rangle^- =
+  \begin{cases}
+    \sum^G_{g=1}\sum^{N_d}_{d=1}w_d\left(\Psi^*_{g,d},
+    \hat{\Omega}_d\cdot\hat{n}_b\Psi_{g,d}\right)_{\partial\mathcal{D}},
+    & \hat{\Omega}\cdot\hat{n}_b>0,\vec{r}\in\partial\mathcal{D} \\
+    \sum^G_{g=1}\sum^{N_d}_{d=1}w_d\left(\Psi^*_{g,d},
+    \hat{\Omega}_d\cdot\hat{n}_b\Psi^\text{inc}_{g,d}\right)_{\partial\mathcal{D}},
+    & \hat{\Omega}\cdot\hat{n}_b<0,\vec{r}\in\partial\mathcal{D}
+  \end{cases}, \label{eq:boundary-source}
+\end{gather}
+%
+Reflecting boundary term:
 %
 \begin{gather}
   \langle\bm{\Psi}^*,\bm{\Psi}\rangle^+ - \langle\bm{\Psi}^*,\mathbb{B}\bm{\Psi}\rangle^- =
@@ -551,7 +575,7 @@ where $\Psi^\text{inc}_{g,d}$ is zero on a vacuum boundary or positive for a bou
 This concludes the derivation of the \gls{SAAF} formulation of the $S_N$ neutron transport method
 for generating transport corrections in the hybrid $S_N$-diffusion method.
 
-\section{Transport Correction Formulations}
+\section{Transport Correction Formulations} \label{sec:transport-correction}
 
 The conventional approach for determining diffusion coefficients for the neutron diffusion
 equations in each subregion involves
@@ -810,13 +834,13 @@ can be evaluated as
   \Psi_{g,d}}{\sum^{N_d}_{d=1}w_d\Psi_{g,d}}. \label{eq:bound-coef}
 \end{gather}
 
-\section{Hybrid $S_N$-Diffusion Method} \label{sec:hybrid-method}
+\section{Iteration Algorithm} \label{sec:hybrid-algorithm}
 
 As described in the previous section, transport correction formulations are commonly used in
-iterative acceleration schemes or hybrid methods to couple high-order neutron transport
-calculations with low-order neutron diffusion calculations. However, the high-order calculations
-remain computationally intensive and limit their applicability to time-independent neutronics
-simulations on \gls{HPC} clusters.
+iterative acceleration schemes or other hybrid methods to couple high-order neutron transport
+calculations with low-order neutron diffusion calculations. However, the high-order calculations of
+full reactor core models remain computationally intensive and limited in their applicability to
+time-independent neutronics simulations on \gls{HPC} clusters.
 In order to reduce the computational cost of the high-level $S_N$ calculation in a reactor
 simulation, I propose reducing
 the problem domain of the $S_N$ method to a \textit{correction region} containing the control rod
@@ -824,7 +848,7 @@ and its vicinity. Consequently, the hybrid $S_N$-diffusion method may retain acc
 and current estimates around the control rod region from the $S_N$ method while making significant
 computational cost savings by treating most of the reactor geometry with the neutron diffusion
 method alone. Henceforth, I will refer to the $S_N$ calculation on the correction
-region as the $S_N$ \textit{subproblem} or \textit{sub-solver}. I define the full problem
+region as the $S_N$ \textit{subproblem} or \textit{subsolver}. I define the full problem
 domain and the correction region as $V_0$ and $V_1$, respectively, where
 $V_1\subseteq V_0$. The iterative algorithm for the hybrid $S_N$-diffusion method is as follows:
 %
@@ -832,9 +856,9 @@ $V_1\subseteq V_0$. The iterative algorithm for the hybrid $S_N$-diffusion metho
   \item Start with an initial neutron diffusion calculation in $V_0$ using the standard neutron
     diffusion method.
   \item Pass the neutron diffusion current estimates along
-    $\partial V_1$ to the $S_N$ sub-solver to evaluate the boundary conditions for the $S_N$
+    $\partial V_1$ to the $S_N$ subsolver to evaluate the boundary conditions for the $S_N$
     subproblem.
-  \item With the $S_N$ sub-solver, evaluate transport correction terms in $V_1$ using Eq.
+  \item With the $S_N$ subsolver, evaluate transport correction terms in $V_1$ using Eq.
     \ref{eq:svdc} or \ref{eq:drift}.
   \item Pass the transport correction terms to the neutron diffusion solver to apply corrections
     within $V_1$ while continuing to apply the standard neutron diffusion solver
@@ -867,7 +891,7 @@ Figure \ref{fig:algorithm} shows a visual flowchart of the same hybrid method al
     \draw [arrow] (1) -- node[anchor=east] {$\bm{\phi^{(0)}_g, J^{(0)}_g}$} (2);
     \draw [arrow] (2) -- node[anchor=east] {$\bm{\Psi^-_g}$ \textbf{along} $\bm{\partial V_1}$} (3);
     \draw [arrow] (3) -- node[anchor=east] {$\bm{\phi^{tr,(i)}_g, J^{tr,(i)}_g}$} (4);
-    \draw [arrow] (4) -- node[anchor=east] {$\bm{D^{s,(i)}_g}$ or $\bm{\vec{D}^{(i)}_g}$} (5);
+    \draw [arrow] (4) -- node[anchor=east] {$\bm{D^{s,(i)}_g}$ \textbf{or} $\bm{\vec{D}^{(i)}_g}$} (5);
     \draw [arrow] (5) -- node[anchor=east] {$\bm{\phi^{(i)}_g, J^{(i)}_g}$} (6);
     \draw [arrow] (6) -- node[anchor=east] {\textbf{Yes}} (7);
     \draw [arrow] (6) -- ([shift={(2cm,0cm)}]6.east)-- node[anchor=west] {\textbf{No}} ([shift={(0.5cm,0cm)}]2.east)--(2);
@@ -877,79 +901,69 @@ Figure \ref{fig:algorithm} shows a visual flowchart of the same hybrid method al
   \label{fig:algorithm}
 \end{figure}
 
-\subsubsection{$S_N$ Subsolver Boundary Conditions \& Buffer Zone}
+\section{$S_N$ Subsolver Boundary Conditions} \label{sec:sn-bc}
 
-The main challenge lies in determining appropriate boundary conditions for the $S_N$ subproblem.
+For the hybrid $S_N$-diffusion method to converge, it requires appropriate boundary conditions for
+the $S_N$ subproblem.
 Given that we want to limit the coverage of $V_1$ to the control rod region and its
 immediate vicinity, $V_1$ should be sufficiently smaller than $V_0$, but large enough to capture
 anisotropies in the flux due to the control rod. As a consequence, the boundaries $\partial V_1$ 
-lie well within $V_0$. Crucially, there is currently no feasible method of generating
-accurate boundary fluxes for an $S_N$ solver from a neutron diffusion flux solution. In 1-D, the
-standard one-group $S_N$ method requires N/2
-incoming boundary flux parameters per boundary mesh point for the N/2 neutron angular fluxes
-flowing into $V_1$. The neutron diffusion method can produce at most one independent
-incoming flux parameter per mesh point; this parameter is the neutron forward/backward current in
-the $P_1$ approximation defined as:
+lie well within $V_0$. Crucially, there is no feasible method of generating
+accurate boundary fluxes for an $S_N$ solver from a neutron diffusion flux solution. We may obtain
+the best estimate by applying the $P_1$ approximation for evaluating the neutron angular flux along
+the discrete ordinates $\hat{\Omega}_d$ of the $S_N$ angular quadrature set as follows
 %
 \begin{align}
-  J_{g,\pm} &= \frac{\phi_g}{4} \mp \frac{D_g}{2}\frac{d\phi_g}{dx} \label{eq:p1-j}
-  \shortintertext{where}
-  J_{g,\pm} &= \mbox{ neutron forward/backward current of group }g. \nonumber
+  \Psi_{g,d} &\approx \frac{1}{4\pi}\left(\phi^\text{diff}_g+3\hat{\Omega}_d\cdot
+  \vec{J}^\text{diff}_g\right) \nonumber \\
+  &=\frac{1}{4\pi}\left(\phi^\text{diff}_g-3\hat{\Omega}_d\cdot D_g\nabla\phi^\text{diff}_g\right)
 \end{align}
 %
-Without additional information, the next best estimate is a uniformly
-isotropic transmission of angular flux, i.e., all N/2 incoming angular fluxes $\Psi$ are equal in
-magnitude. This is a good assumption far from the control rod, but will not produce accurate
-fluxes if the boundary is too close to the control rod. This type of boundary condition is similar
-to the white boundary condition, which describes the uniformly
-isotropic reflection of particles at a boundary, except this case involves transmission rather than
-reflection. Isotropic flux transmission at $x$ can be expressed mathematically for forward angular
-fluxes as:
+where the diff superscript denotes flux estimates from the latest neutron diffusion calculation.
+With this relation, we can formulate the boundary source term for the $S_N$ subsolver by setting
+$\Psi^\text{inc}_{g,d}$ in Eq.\ \ref{eq:boundary-source} to
 %
-\begin{align}
-  \sum^N_{n=N/2+1}w_n\mu_n\Psi(x,\mu_n) =& J_{+}(x) && (\mu_n>0) \nonumber \\
-  \Psi(x,\mu_n)\sum^N_{n=N/2+1}w_n\mu_n =& J_{+}(x) && (\because \mbox{isotropic transmission})
-  \nonumber \\
-  \Psi(x,\mu_n) =& J_{+}(x)\Bigg/\sum^N_{n=N/2+1}w_n\mu_n
-\end{align}
-%
-and backward angular fluxes as:
-%
-\begin{align}
-  \sum^{N/2}_{n=1}w_n\mu_n\Psi(x,\mu_n) =& J_{-}(x) && (\mu_n<0) \nonumber \\
-  \Psi(x,\mu_n)\sum^{N/2}_{n=1}w_n\mu_n =& J_{-}(x) && (\because \mbox{isotropic transmission})
-  \nonumber \\
-  \Psi(x,\mu_n) =& J_{-}(x)\Bigg/\sum^{N/2}_{n=1}w_n\mu_n \label{eq:sn-psi-j}
-\end{align}
-%
-These boundary conditions for the $S_N$ sub-solver will generally yield some deviations in the
-$\phi$ distributions since neutron fluxes in realistic reactor systems are at least slightly
-anisotropic in most of the domain. However, in my preliminary investigations, the influence of
-boundary conditions on the ratio $J$ and $\frac{d\phi}{dx}$ does not extend far from the boundaries
-in optically thick media due to the strong scattering (e.g., graphite or molten salt) or
-absorption effects (e.g., control rod). In the bulk regions far from the boundaries, the
-scattering and absorption effects have the most significant influence on the flux. I observed that
-the \glspl{SVDC} generated with the $S_N$ sub-solver within $V_1$ were accurate everywhere except
-near $\partial V_1$. Therefore, $V_1$ must be large enough to provide transport corrections
-through the \glspl{SVDC} and accommodate inaccurate \glspl{SVDC} near
-$\partial V_1$. The inaccurate \glspl{SVDC} should then be discarded in favor of using
-$P_1$-based diffusion coefficients as in the rest of $V_0$ not covered by $V_0$. The
-subsequent neutron diffusion calculation with this mix of \glspl{SVDC} and $P_1$-based diffusion
-coefficients should provide more accurate $\phi$ and $k$ estimates than a conventional
-neutron diffusion calculation.
+\begin{gather}
+  \Psi^\text{inc}_{g,d} = \frac{1}{w}
+  \left(\phi^\text{diff}_g-3\hat{\Omega}_d\cdot D_g\nabla\phi^\text{diff}_g\right)
+\end{gather}
+
+\section{Buffer Region} \label{sec:buffer-region}
+
+This boundary condition for the $S_N$ subsolver will generally cause deviations
+in the flux and transport correction values since the $P_1$ approximation is accurate for up to
+linear anisotropies in the flux. However, as I will show in the next chapter, the influence of
+boundary conditions on the accuracy of
+the transport correction terms does not extend far from the boundary $\partial V_1$ in optically
+thick media due to competing influences from the bulk scattering and absorption effects in $V_1$.
+Results in the next chapter will show that transport corrections generated with the $S_N$
+subsolver within $V_1$ are accurate everywhere up to a few centimeters near $\partial V_1$.
+
+When applying the hybrid method, $V_1$ must be large enough to provide accurate transport
+corrections near the highly-absorbing control rod while simultaneously accommodating for inaccurate
+transport corrections near $\partial V_1$. I will henceforth refer to the region in $V_1$
+near $\partial V_1$ with inaccurate transport corrections as the \textit{buffer region} ($V_1'$).
+We will discard inaccurate transport correction values in $V_1'$. Therefore, the subsequent neutron
+diffusion calculation on $V_0$ will only apply transport corrections in $V_1$ excluding $V_1'$.
+
+\section{Numerical Implementation}
 
 \section{Summary} \label{sec:hybrid-summary}
-%
-%In this chapter, I presented the theoretical basis for a hybrid $S_N$-diffusion method, a novel
-%method for improving the neutron diffusion method for neutronics simulations of reactor
-%systems containing highly neutron-absorbing regions. The hybrid method relies on \glspl{SVDC}
-%derived from reference flux solutions of $S_N$ calculations to provide transport
-%corrections to the neutron diffusion method. The hybrid method is less computationally intensive
-%than the standalone $S_N$ neutron transport method because 1) $S_N$ calculations are limited to
-%correction regions which cover a fraction of the overall geometry, 2) and the \glspl{SVDC} are
-%observed to converge faster than the neutron fluxes in $S_N$ calculations.
-%
-%I established a framework for the hybrid method for coupling an $S_N$ sub-solver and a neutron
+
+In this chapter, I presented the mathematical derivations for the \gls{SAAF} formulation of the
+$S_N$ method, transport correction formulations, and boundary conditions relevant to the hybrid
+$S_N$-diffusion method. I also presented details on the iteration algorithm and the handling of
+transport corrections in the hybrid $S_N$-diffusion method to improve on the standard neutron
+diffusion method for neutronics simulations of reactor systems containing highly neutron-absorbing
+regions (control rods). The hybrid method relies on transport corrections derived from the flux
+solutions from the $S_N$ subsolver to fix inaccurate flux estimates from using the neutron
+diffusion method alone. The hybrid method saves on computational expense at the cost of some
+accuracy in reactor regions not treated with transport corrections. In the next chapter, I will
+also show that I can further reduce computational expense by leaving the flux in the $S_N$
+subsolver because the transport correction parameters converge faster than the flux in the $S_N$
+subsolver.
+
+%I established a framework for the hybrid method for coupling an $S_N$ subsolver and a neutron
 %diffusion solver through outer iterations by taking advantage of the weak dependence of the $S_N$
 %flux solution on the approximate boundary conditions determined from the neutron diffusion flux
 %solution. This framework could be extended to improve multischeme methods, which
